[project]
name = "weather-forecaster"
version = "0.1.0"
description = "AI-powered weather and business strategy dashboard"
readme = "README.md"
requires-python = ">=3.12"  
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]